--- a/style.css
+++ b/style.css
@@ -184,4 +184,27 @@ footer a {
 	font-size: small;
 	color: #666;
 	text-decoration: none;
+
 }
+.divcel{
+width: 50px;
+height: 50px;
+background-color: red;
+border: 1px solid;
+margin: -1px;
+padding: 0;
+}
+#tableau{
+width: 100px;
+height: 100px;
+display: flex;
+flex-wrap: wrap;
+border:1px solid;
+margin: 0;
+padding: 0;
+}
+
+
+
+
+
