--- a/style.css
+++ b/style.css
@@ -186,12 +186,13 @@ footer a {
 	text-decoration: none;
 
 }
-.divcel{
+#tableau div{
 background-color: red;
 border: 1px solid;
 margin: -1px;
 padding: 0;
 }
+
 #tableau{
 width: 300px;
 height: 300px;
